# numerai-predict

./: .gitignore  AGENTS.md  Makefile  README.md  SKILLS.md  predict.py  requirements.txt
.github/workflows/: deploy-3-10.yaml  deploy-3-11.yaml  deploy-3-9.yaml  deploy-3.12.yaml  deploy-images.yml  deploy-shell.yaml  deploy-stable.yaml  push-docker-release.yaml  test-all.yaml
py3.10/: Dockerfile  poetry.lock.bak  pyproject.toml  requirements.txt
py3.11/: Dockerfile  pyproject.toml  requirements.txt
py3.12/: Dockerfile  pyproject.toml  requirements.txt
py3.13/: Dockerfile  pyproject.toml  requirements.txt
py3.9/: Dockerfile
shell/: Dockerfile
tests/: generate_pkl.py  test_predict.py
