[project]
name = "py3-12"
version = "0.1.0"
readme = "../README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "absl-py (>=2.3.1,<3.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "aiosignal (>=1.4.0,<2.0.0)",
    "astunparse (>=1.6.3,<2.0.0)",
    "async-timeout (>=5.0.1,<6.0.0)",
    "attrs (>=25.3.0,<26.0.0)",
    "cachetools (>=5.3.1,<6.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "certifi (>=2025.7.14,<2026.0.0)",
    "charset-normalizer (>=3.4.2,<4.0.0)",
    "click (>=8.2.1,<9.0.0)",
    "cloudpickle (>=3.1.1,<4.0.0)",
    "contourpy (>=1.3.2,<2.0.0)",
    "cycler (>=0.12.1,<0.13.0)",
    "fickling (>=0.1.4,<0.2.0)",
    "filelock (>=3.18.0,<4.0.0)",
    "flatbuffers (>=25.2.10,<26.0.0)",
    "fonttools (>=4.59.0,<5.0.0)",
    "frozenlist (>=1.7.0,<2.0.0)",
    "fsspec (>=2025.7.0,<2026.0.0)",
    "gast (>=0.6.0,<0.7.0)",
    "google-pasta (>=0.2.0,<0.3.0)",
    "graphviz (>=0.21,<0.22)",
    "grpcio (>=1.73.1,<2.0.0)",
    "h5py (>=3.14.0,<4.0.0)",
    "idna (>=3.10,<4.0)",
    "jax (>=0.6.2,<0.7.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "keras (>=3.10.0,<4.0.0)",
    "kiwisolver (>=1.4.8,<2.0.0)",
    "libclang (>=18.1.1,<19.0.0)",
    "lightgbm (==4.5.0)",
    "lightning-utilities (>=0.14.3,<0.15.0)",
    "markdown (>=3.8.2,<4.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "ml-dtypes (>=0.5.1,<0.6.0)",
    "mlxtend (>=0.23.4,<0.24.0)",
    "mpmath (>=1.3.0,<2.0.0)",
    "multidict (>=6.6.3,<7.0.0)",
    "networkx (>=3.5,<4.0)",
    "numerapi (>=2.20.7,<3.0.0)",
    "numerblox>=1.6.1,<2.0.0",
    "numerai-tools (>=0.4.0,<0.5.0)",
    "numpy (>=2.0.0,<3.0.0)",
    "oauthlib (>=3.3.1,<4.0.0)",
    "opt-einsum (>=3.4.0,<4.0.0)",
    "packaging (>=25.0,<26.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "polars (>=1.31.0,<2.0.0)",
    "protobuf (>=5.29.5,<6.0.0)",
    "pyarrow (>=18.0.0,<19.0.0)",
    "pyasn1 (>=0.6.1,<0.7.0)",
    "pyasn1-modules (>=0.4.2,<0.5.0)",
    "pyparsing (>=3.2.3,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pytorch-lightning (>=2.5.2,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "requests-oauthlib (>=2.0.0,<3.0.0)",
    "rsa (>=4.9.1,<5.0.0)",
    "scikit-learn (>=1.6.1,<1.7.0)",
    "scipy (>=1.16.0,<2.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "tensorboard (>=2.19.0,<2.20.0)",
    "tensorboard-data-server (>=0.7.2,<0.8.0)",
    "tensorflow-estimator (>=2.15.0,<3.0.0)",
    "tensorflow-io-gcs-filesystem (>=0.37.1,<0.38.0)",
    "termcolor (>=3.1.0,<4.0.0)",
    "threadpoolctl (>=3.6.0,<4.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchmetrics (>=1.7.4,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "treelite (>=4.4.1,<5.0.0)",
    "treelite-runtime (>=3.9.1,<4.0.0)",
    "typing-extensions (>=4.14.1,<5.0.0)",
    "tzdata (>=2025.2,<2026.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "wrapt (>=1.17.2,<2.0.0)",
    "xgboost (>=2.1.4,<3.1.0)",
    "yarl (>=1.20.1,<2.0.0)",
    "tensorflow (>=2.19.0,<2.20.0)",
    "google-auth (>=2.40.3,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "onnx (>=1.18.0,<2.0.0)",
    "skorch (>=1.1.0,<2.0.0)",
    "numba (>=0.61.2,<0.62.0)",
    "tabpfn (>=2.1.0,<3.0.0)",
    "tensorflow-decision-forests (>=1.12.0,<2.0.0)",
]

# removed "tensorflow-decision-forests (==1.8.1)", possibly add ydf via 0.4.3

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
